# az-challenge

./: .gitignore
backend/: Dockerfile.dev  README.md  pyproject.toml  requirements.dev.txt
backend/app/: db.py  main.py  models.py  schemas.py  ws.py
backend/app/routes/: auth.py  champions.py  champions_seed.py  health.py  logs.py  polls.py  riot.py  wheels.py
backend/app/security/: auth.py  csrf.py  ip.py  passwords.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: PollWidget.tsx  ProgressHeader.tsx  RiotSummary.tsx  TwitchEmbed.tsx  WheelWidget.tsx
frontend/src/components/Admin/: AdminLayout.tsx  AdminPanel.tsx  ChampionAdmin.tsx  LoginForm.tsx  WheelAdmin.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Toaster.tsx
frontend/src/hooks/: useMe.ts  useWS.ts
frontend/src/lib/: links.ts  motion.ts
frontend/src/styles/: index.css
infra/: Caddyfile  backend.env.example  docker-compose.dev.yml  docker-compose.yml
